--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/shakkirptb/node4node.git"
   },
-   dependencies:{
+   "dependencies":{
 	"ootil":"*"
   },
   "keywords": [
